# takt

./: .gitignore  Procfile  README.md  audio.py  auth_heroku.py  bot.py  config.py  error.py  exceptions.py  old.py  pyproject.toml  requirements.txt  run.py  takt.py
receivers/: __init__.py  client.py  slash.py
takt/: __info__.py  __init__.py  __main__.py  audio.py  bot.py  config.py  error.py  exceptions.py  takt.py
takt/receivers/: __init__.py  client.py  slash.py
